# bio-transport-cfd-lab

./: .gitignore  LICENSE-docs.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
notebooks/: BioTransport_CFD_Lab.ipynb
openfoam/: README.md
openfoam/cases/: README.md
scripts/: run_all_examples.py  run_cartesian_transport.py  run_openfoam_case.py  run_radial_transport.py  run_random_walk.py
src/biotransport_lab/: __init__.py  api.py  core.py  dimensionless.py  fields.py  openfoam_adapter.py  random_walk.py  solver_cartesian.py  solver_radial.py  visualization.py
tests/: test_api_visualization.py  test_cartesian_solver.py  test_core.py  test_dimensionless.py  test_fastapi_app.py  test_import.py  test_notebook.py  test_openfoam_adapter.py  test_radial_solver.py  test_random_walk.py  test_scripts.py
web/: app.js  index.html  styles.css
