[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-transport-cfd-lab"
version = "0.1.0"
description = "Undergraduate biological transport teaching lab with Python solvers, notebooks, web demos, and optional OpenFOAM support."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.110",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "plotly>=5.18",
  "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "ipykernel>=6.0",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "notebook>=7.0",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
